Added LawnCare to Recent Work

--- a/index.html
+++ b/index.html
@@ -275,6 +275,24 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-6 col-md-3 col-lg-3 branding">
+                        <div class="portfolio-item">
+                            <div class="hover-bg">
+                                <a class="rw" href="http://www.madebyafftene.com/lawn-landing-page" target="_blank">
+                                    <div class="hover-text">
+                                        <span><h3 class="uppercase">LawnCare.Net</h3></span>
+                                        <h5 class="refill-content">Completed: March 2015 (Completed for an Interview Coding Test)</h5>
+                                        <h4 class="refill-content">&#8226HTML &#8226CSS/LESS &#8226PSD-to-HTML</h4>
+                                        <div class="hover-btn">
+                                            <a href="https://github.com/acttechie55/LawnCare4" target="_blank">
+                                                <h3 class="uppercase">View GitHub Code</h3></a>
+                                        </div>
+                                </a>
+                                </div>
+                                <img src="img/portfolio-screenshots/resp-lawn.png" class="img-responsive" alt="...">
+                            </div>
+                        </div>
+                    </div>
                     <span>
                         <h1 class="pull-right">...And there's always more to come
                             <i class="fa fa-smile-o"></i>
