Adding lawn to responsive site

--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                                 <a class="rw" href="http://www.madebyafftene.com/lawn-landing-page" target="_blank">
                                     <div class="hover-text">
                                         <span><h3 class="uppercase">LawnCare.Net</h3></span>
-                                        <h5 class="refill-content">Completed: March 2015 (Completed for an Interview Coding Test)</h5>
-                                        <h4 class="refill-content">&#8226HTML &#8226CSS/LESS &#8226PSD-to-HTML</h4>
+                                        <h5 class="lawn-content">Completed: March 2015 (Completed for an Interview Coding Test)</h5>
+                                        <h4 class="lawn-content">&#8226HTML &#8226CSS/LESS &#8226PSD-to-HTML</h4>
                                         <div class="hover-btn">
                                             <a href="https://github.com/acttechie55/LawnCare4" target="_blank">
                                                 <h3 class="uppercase">View GitHub Code</h3></a>
@@ -435,6 +435,22 @@
                     </div>
                     <div class="hover-btn">
                         <a href="https://github.com/acttechie55/BBVA-Card-Project" target="_blank"><h3 class="uppercase text-center">View GitHub Code</h3></a>
+                    </div>
+                </div>
+                 <div class="resp-portfolio-item">
+                    <h2><span>LawnCare.Net</span></h2>
+                    <img src="img/portfolio-screenshots/resp-lawn.png">
+                    <div class="more-info">
+                        <div class="header">
+                            <h3 class="uppercase text-center">More Info About Project</h3>
+                        </div>
+                        <div class="content 5th-content"></div>
+                    </div>
+                    <div class="hover-btn">
+                        <a href="http://www.madebyafftene.com/lawn-landing-page" target="_blank"><h3 class="uppercase text-center">Go to full site</h3></a>
+                    </div>
+                    <div class="hover-btn">
+                        <a href="https://github.com/acttechie55/lawncare4" target="_blank"><h3 class="uppercase text-center">View GitHub Code</h3></a>
                     </div>
                 </div>
             </div>
