--- a/index.html
+++ b/index.html
@@ -278,6 +278,24 @@
                     <div class="col-sm-6 col-md-3 col-lg-3 branding">
                         <div class="portfolio-item">
                             <div class="hover-bg">
+                                <!--<a class="rw" href="http://www.madebyafftene.com/lawn-landing-page" target="_blank">-->
+                                    <div class="hover-text">
+                                        <span><h3 class="uppercase">MadeByAfftene.com</h3></span>
+                                        <h5 class="madeby-content">Completed: January 2016 (Hand-Coded, Took About 4-6 Weeks)</h5>
+                                        <h4 class="madeby-content">&#8226HTML &#8226CSS/LESS &#8226jQuery &#8226Responsive Design &#8226Bootstrap &#8226UX/UI Design</h4>
+                                        <div class="hover-btn">
+                                            <a href="https://github.com/acttechie55/MadeByAfftene" target="_blank">
+                                                <h3 class="uppercase">View GitHub Code</h3></a>
+                                        </div>
+                                </a>
+                                </div>
+                                <img src="img/portfolio-screenshots/resp-madeby.png" class="img-responsive" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3 col-lg-3 branding">
+                        <div class="portfolio-item">
+                            <div class="hover-bg">
                                 <a class="rw" href="http://www.madebyafftene.com/lawn-landing-page" target="_blank">
                                     <div class="hover-text">
                                         <span><h3 class="uppercase">LawnCare.Net</h3></span>
@@ -349,7 +367,7 @@
                 <a href="mailto:actaylor55@gmail.com" target="_blank ">Email <i class="fa fa-envelope-o"></i></a>
             </li>
             <li>
-                <a href="resume012416.pdf" target="_blank">Resume <i class="fa fa-paperclip"></i></a>
+                <a href="AffteneTaylorNonArtsResume022416Reg.pdf" target="_blank">Resume <i class="fa fa-paperclip"></i></a>
             </li>
         </ul>
     </nav>
@@ -437,14 +455,30 @@
                         <a href="https://github.com/acttechie55/BBVA-Card-Project" target="_blank"><h3 class="uppercase text-center">View GitHub Code</h3></a>
                     </div>
                 </div>
-                 <div class="resp-portfolio-item">
+                <div class="resp-portfolio-item">
+                    <h2><span>MadeByAfftene.com</span></h2>
+                    <img src="img/portfolio-screenshots/resp-madeby.png">
+                    <div class="more-info">
+                        <div class="header">
+                            <h3 class="uppercase text-center">More Info About Project</h3>
+                        </div>
+                        <div class="content 5th-content"></div>
+                    </div>
+                    <!--<div class="hover-btn">
+                        <a href="http://www.madebyafftene.com/bbva-card-project" target="_blank"><h3 class="uppercase text-center">Go to full site</h3></a>
+                    </div>-->
+                    <div class="hover-btn">
+                        <a href="https://github.com/acttechie55/MadeByAfftene" target="_blank"><h3 class="uppercase text-center">View GitHub Code</h3></a>
+                    </div>
+                </div>
+                <div class="resp-portfolio-item">
                     <h2><span>LawnCare.Net</span></h2>
                     <img src="img/portfolio-screenshots/resp-lawn.png">
                     <div class="more-info">
                         <div class="header">
                             <h3 class="uppercase text-center">More Info About Project</h3>
                         </div>
-                        <div class="content 5th-content"></div>
+                        <div class="content 6th-content"></div>
                     </div>
                     <div class="hover-btn">
                         <a href="http://www.madebyafftene.com/lawn-landing-page" target="_blank"><h3 class="uppercase text-center">Go to full site</h3></a>
@@ -460,7 +494,7 @@
         </div>
         <div class="resume-section">
             <div class="resume-btn">
-                <a href="resume012416.pdf" target="_blank"><h3 class="uppercase text-center">View My Resume</h3></a>
+                <a href="AffteneTaylorNonArtsResume022416Reg.pdf" target="_blank"><h3 class="uppercase text-center">View My Resume</h3></a>
             </div>
         </div>
     </div>
