correcting Google Chrome wonkiness with scroll

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 
 <body>
@@ -60,9 +61,9 @@
 
         <!-- About Page
         =================================== -->
-        <div class="section section-about not-home scroll-overflow">
+        <div class="section section-about not-home">
             <div class="section-title">
-                <h2>A<br>b<br>o<br>u<br>t</h2>
+                <h2>A<br>b<br>o<br>u<br>T</h2>
             </div>
             <div class="section-content-diff" id="about-resp-section">
                 <!--First Div
@@ -168,8 +169,8 @@
                 <div class="skills-bar-graph wrap bar-graph-resp">
                     <span><h1 class="bar-graph-header uppercase text-center">What I Know</h1></span>
                     <div class="holder uppercase">
-                        <div class="bar cf" data-percent="95%"><span class="label">HTML5</span></div>
-                        <div class="bar cf" data-percent="90%"><span class="label light">CSS3/LESS</span></div>
+                        <div class="bar cf" data-percent="95%"><span class="label">HTML</span></div>
+                        <div class="bar cf" data-percent="90%"><span class="label light">CSS/LESS</span></div>
                         <div class="bar cf" data-percent="75%"><span class="label">Javascript <br> & jQuery</span></div>
                         <div class="bar cf" data-percent="75%"><span class="label light">jQuery</span></div>
                         <div class="bar cf" data-percent="55%"><span class="label">Angular.js</span></div>
@@ -185,11 +186,11 @@
 
         <!-- Recent Work Page
         ================================== -->
-        <div class="section scroll-overflow section-rw not-home">
+        <div class="section section-rw not-home">
             <div class="section-title section-title-flex">
                 <h2>R<br>e<br>c<br>e<br>n<br>t<br><br>W<br>o<br>r<br>k</h2>
             </div>
-            <div class="container yes-overflow margin-auto recent-work-section recent-resp-section">
+            <div class="container margin-auto recent-work-section recent-resp-section">
                 <span><h1 class="text-center">Projects I've Worked On...</h1></span>
                 <div id="lightbox" class="row">
                     <div class="col-sm-6 col-md-3 col-lg-3 branding">
@@ -322,7 +323,7 @@
 
         <!-- Education
         =============================== -->
-        <div class="section section-edu not-home no-overflow">
+        <div class="section section-edu not-home">
             <div class="section-title">
                 <h2>E<br>d<br>u<br>c<br>a<br>t<br>i<br>o<br>n</h2>
             </div>
@@ -375,7 +376,7 @@
     <!-- Responsive Structure
     =============================== -->
 
-    <div class="responsive-structure scroll-overflow">
+    <div class="responsive-structure">
         <div class="home-section">
         </div>
         <div class="about-section block text-center">
